--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=toko_kasir
+DB_DATABASE=ipos
 DB_USERNAME=root
 DB_PASSWORD=
 
